--- a/game.html
+++ b/game.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Back Button -->
+    <a href="homepage.html" style="position: absolute; top: 10px; left: 10px; z-index: 10; text-decoration: none;">
+        <button style="padding: 10px 20px; font-size: 16px; cursor: pointer;">Back to Homepage</button>
+    </a>
+
+       
+    <!-- Blocker/Instructions -->
     <div id="blocker">
         <div id="instructions">
             <p style="font-size:36px">Click to Enter</p>
@@ -19,12 +26,14 @@
                 Next Music: N
             </p>
         </div>
-        <!-- Button for adding images -->
-        <input type="file" id="image-uploader" accept="image/*" multiple style="position: absolute; top: 10px; right: 10px; z-index: 10;" />
     </div>
+    <!-- Button for adding images -->
+    <input type="file" id="image-uploader" accept="image/*" multiple style="position: absolute; top: 10px; right: 10px; z-index: 10;" />
+    <!-- Scene -->
     <div id="gallery-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.8.3/dist/nipplejs.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
+
